# larql

./: Cargo.toml  META_MODEL.md  Makefile  README.md  ROADMAP.md  ROADMAP_STATUS.md  qwen3.6-support-checklist.md  session-ses_0c82.md
.github/workflows/: larql-compute-metal.yml
bench/aim-validation/: fr3_explicit_rewrite_gemma3-4b.json  fr3_template_ablation_gemma3-4b.json  fr_early_exit_decode_projection_gemma3-4b.json
bench/baselines/: _c10_26b_larql_inproc.json  _c10_26b_larql_inproc_off.json  _c10_26b_larql_inproc_q4kattn.json  _c10_26b_larql_inproc_rerun.json  _c10_26b_larql_inproc_tmax.json  _qres_full.json  _qres_full_asm.json  _qres_full_int8attn.json  _qres_full_kvappend.json  _qres_full_q6kasm.json  _qres_full_serialcuts.json  _qres_full_v3.json  _qres_off.json  c10_gemma3-4b_cpu_reconciled.json  c10_gemma4-26b-a4b_cpu_RUNBOOK.md  c10_gemma4-26b-a4b_cpu_reconciled.json
crates/larql-cli/: Cargo.toml  ROADMAP.md  coverage-policy.json
crates/larql-compute/: Cargo.toml  PERFORMANCE.md  coverage-policy.json
crates/larql-compute-metal/: Cargo.toml
crates/larql-inference/: Cargo.toml  PERFORMANCE.md  README.md
crates/larql-kv/: CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md  coverage-policy.json
crates/larql-models/: Cargo.toml  README.md  ROADMAP.md  coverage-policy.json
crates/larql-vindex-spec/: Cargo.toml  README.md  SPEC.md
crates/larql-vindex-spec/src/: lib.rs  thresholds.rs
docs/: cli.md  fork-history.md  lql-guide.md  mech-interp.md  specs.md
scripts/: README_shannon_score.md  shannon_score_hf.py  shannon_score_mlx.py
(+618 files in other folders)
